--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "basex-rs"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["zTgx <747674262@qq.com>"]
 edition = "2018"
 readme = "README.md"
-keywords = [ "base58" ]
+keywords = [ "base58", "Bitcoin", "ripple"]
 categories = [ "blockchain" ]
 license = "MIT/Apache-2.0"
 exclude = [ "/.travis.yml" ]
