fix Cargo.toml categories

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["zTgx <747674262@qq.com>"]
 edition = "2018"
 readme = "README.md"
 keywords = [ "base58", "Bitcoin", "ripple"]
-categories = [ "blockchain" ]
+categories = [ "cryptography" ]
 license = "MIT/Apache-2.0"
 exclude = [ "/.travis.yml" ]
 description = "Base58 implementation."
